--- a/src/frontend_canister/src/Components/Home/Dashboard.css
+++ b/src/frontend_canister/src/Components/Home/Dashboard.css
@@ -1,22 +1,27 @@
-.home {
-    display: flex;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1500px;
-  }
-  .home__image {
-    width: 100%; 
-  height: auto; 
-  object-fit: cover;
-    z-index: -1;
-    margin-bottom: -150px;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  }
+/* Dashboard.css */
 
-  .home__row {  
-    display: flex; 
-    z-index: 1; 
-    margin-left: 5px;  
-    margin-right: 5px;
-  }
+.home {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1500px;
+}
+
+.home__container {
+  display: flex;
+  flex-wrap: wrap;
+  /* Allow items to wrap to the next row */
+  justify-content: space-between;
+  /* Add spacing between items */
+  margin-top: 20px;
+  /* Adjust as needed */
+}
+
+/* Adjust width of product container */
+.product {
+  width: calc(25% - 20px);
+  /* 25% width with margin included */
+  margin-bottom: 20px;
+  /* Adjust margin between products */
+}
